--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7effef5b7c40>"
+       "<matplotlib.collections.PathCollection at 0x7f18584b1520>"
       ]
      },
      "execution_count": 7,
