Add jupyterbook test

--- a/notebooks/02-gitbasics.ipynb
+++ b/notebooks/02-gitbasics.ipynb
@@ -16,66 +16,24 @@
     "\n",
     "Le livre en français https://git-scm.com/book/fr/v2\n",
     "\n",
-    "Installer [Git](https://git-scm.com/downloads) sur votre ordinateur"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Installer [Git](https://git-scm.com/downloads) sur votre ordinateur\n",
+    "\n",
     "## Pourquoi un gestionnaire de version\n",
     "\n",
     "- Toutes les modifications sont enregistrées.\n",
     "- A tout moment vous pouvez revenir sur une version précédente.\n",
     "- Vous pouvez l'utiliser pour quasiment tous les types de fichier.\n",
     "- C'est la meilleure approche pour collaborer sur un document.\n",
-    "- Chaque modification est identifiée et datée."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "- Chaque modification est identifiée et datée.\n",
+    "\n",
     "## GitHub\n",
     "\n",
     "- Service web utilisant Git comme gestionnaire de version. \n",
     "- Github permet d'enregistrer et partager toutes les étapes de développement d'un logiciel ou de la rédaction d'un document au format texte au cours du temps. A tout moment vous pouvez revenir à une précedente version, l'ensemble de l'historique est toujours préservé. \n",
     "- Github permet d'organiser un travail collaboratif avec différents niveaux d'accès, la gestion des bugs et hébergement de la documentation.\n",
     "- Github est la plus grande bibliothèque de codes du monde.\n",
-    "- Fonctionne de plus en plus comme un réseau social et offre une grande visibilité à vos travaux."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## SCM (Source Code Management)\n",
+    "- Fonctionne de plus en plus comme un réseau social et offre une grande visibilité à vos travaux.\n",
     "\n",
-    "- Enregistrement des changements dans un ou plusieurs fichiers au cours du temps.\n",
-    "- Vous pouvez revenir à tout moment vers une version précedente.\n",
-    "- Fonctionne avec tout type de document.\n",
-    "- Excellent moyen pour collaborer sur un même document.\n",
-    "- Chaque modification enregistrée est datée avec le nom de son auteur.\n",
-    "- Les figures proviennent du [Pro Git book](http://git-scm.com/book).\n",
-    "- Ce support est fortement inspiré de [\"Become a git guru\"](https://www.atlassian.com/git/tutorials)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Gestion distribuée des versions\n",
     "\n",
     "<img src=\"images/git.png\" alt=\"git\" width=\"300px\"/>\n",
@@ -83,20 +41,13 @@
     "- Chaque membre du projet possède une copie totale du projet\n",
     "- On peut contribuer seul ou à plusieurs.\n",
     "- Pas besoin de connexion réseau\n",
-    "- Les sauvegardes sont très nombreuses grâce à ce système."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Configuration\n",
+    "- Les sauvegardes sont très nombreuses grâce à ce système.\n",
     "\n",
-    "Il faut renseigner votre identité avec votre adresse de messagerie. \n",
+    "## Installation et configuration\n",
+    "\n",
+    "- Télécharger et installer [Git pour windows](http://git-scm.com).\n",
+    "- Configuration: Il faut renseigner votre identité avec votre adresse de messagerie. \n",
+    "\n",
     "Ouvrir la console « Git bash »:\n",
     "\n",
     "```\n",
@@ -113,7 +64,7 @@
     }
    },
    "source": [
-    "## Enregistrer sa clé SSH\n",
+    "## Créer sa clé SSH\n",
     "\n",
     "Saisissez la ligne suivante dasn le git bash:\n",
     "\n",
@@ -132,7 +83,22 @@
     "Enter passphrase (empty for no passphrase):\n",
     "```\n",
     "\n",
-    "Appuyer sur \"enter\" (conseillé) ou saisir un mot de passe \n"
+    "Appuyer sur \"enter\" (conseillé) ou saisir un mot de passe.  Deux fichiers on été créés : un clé publique et une clé privée. La clé publique sera celle que l'on pourra partager et la clé privée ne doit être communiquée sous aucun prétexte, elle est comme un mot de passe. Si vous la perder vous devrez recommencer la procédure.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "## Créer votre compte GitHub\n",
+    "\n",
+    "Il suffit de cliquer en haut à droite sur `Sign Up`\n",
+    "\n",
+    "Une fois que le compte a été créé allez sur le dépot <https://github.com/pnavaro/agrocampus> et cliquez sur `Fork` en haut à droite.\n",
+    "\n",
+    "Vous aurez une copie de ces transparents sur votre compte GitHub.\n"
    ]
   },
   {
@@ -146,7 +112,7 @@
     "## Clonage du dépôt\n",
     "\n",
     "```bash\n",
-    "git clone https://github.com/pnavaro/agrocampus.git\n",
+    "git clone https://github.com/{GITHUB_LOGIN}/agrocampus.git\n",
     "```"
    ]
   },
@@ -161,7 +127,7 @@
     "## Branche\n",
     "\n",
     "```bash\n",
-    "git checkout -b my_branch\n",
+    "git checkout -b dev\n",
     "```\n",
     "\n",
     "Permet de \"figer\" une version personnelle locale sur laquelle vous pouvez travailler sans modifier la branche principale \"master\"."
@@ -226,7 +192,6 @@
     }
    ],
    "source": [
-    "%%bash\n",
     "git status"
    ]
   },
