deploy: ba6bdd26cc8a9d0d6bc30d373d2b943578dbf3b4

--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f18584b1520>"
+       "<matplotlib.collections.PathCollection at 0x7f5dd8f52ee0>"
       ]
      },
      "execution_count": 7,
