deploy: 146748993c815f475ef30f30ca10f99127ee66e3

--- a/02-gitbasics.ipynb
+++ b/02-gitbasics.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "Une fois que le compte a été créé allez sur le dépot <https://github.com/pnavaro/agrocampus> et cliquez sur `Fork` en haut à droite.\n",
     "\n",
-    "Vous aurez une copie de ces transparents sur votre compte GitHub.\n"
+    "Vous aurez une copie de ces transparents sur votre compte GitHub."
    ]
   },
   {
@@ -170,6 +170,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:35.194049Z",
+     "iopub.status.busy": "2020-09-10T15:23:35.193494Z",
+     "iopub.status.idle": "2020-09-10T15:23:35.197430Z",
+     "shell.execute_reply": "2020-09-10T15:23:35.197959Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -330,66 +336,30 @@
    "source": [
     "## Prise en main\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Local Version Control Systems\n",
-    "\n",
-    "![Local](images/local.png){width=50%}\n",
-    "\n",
-    "- One of the most saving popular was a system called RCS\n",
-    "- Available with the Developer Tools with Mac OS X\n",
-    "- Collaboration is not really possible.\n",
-    "\n",
-    "### Centralized Version Control Systems\n",
-    "\n",
-    "![CVS](images/cvs.png){width=50%}\n",
-    "\n",
-    "- Clients check out files from a central place.\n",
-    "- You know what everyone else on the project is doing\n",
-    "- A single server contains all the versioned files.\n",
-    "- For many years, this has been the standard (CVS, SVN).\n",
-    "- You always need network connection.\n",
-    "- If the server is corrupted, with no backup, you lose everything !\n",
-    "\n",
-    "### Distributed Version Control Systems\n",
-    "\n",
-    "![Git](images/git.png){width=30%}\n",
-    "\n",
-    "- Clients fully mirror the repository.\n",
-    "- You can collaborate with different groups of people in different ways simultaneously within the same project.\n",
-    "- No need of network connection.\n",
-    "- Multiple backups.\n",
-    "\n",
-    "\n",
-    "#### Configure Git\n",
-    "\n",
-    "Install git on windows https://gitforwindows.org\n",
+    "### Configuration\n",
     "\n",
     "```bash\n",
     "$ git config --global user.name \"Pierre Navaro\"\n",
     "$ git config --global user.email \"pierre.navaro@univ-rennes1.fr\"\n",
-    "$ git config --global core.editor mvim\n",
-    "$ git config --global merge.tool opendiff\n",
     "```\n",
+    "\n",
+    "Utiliser la même adresse qu pour votre compte GitHub. Verifier la configuration avec:\n",
+    "\n",
     "\n",
     "```bash\n",
     "$ git config --list\n",
-    "   user.name=Pierre Navaro\n",
-    "   user.email=pierre.navaro@univ-rennes1.fr\n",
-    "   core.editor=mvim\n",
-    "   merge.tool=opendiff\n",
     "```\n",
     "\n",
     "Settings are saved on the computer for all your git repositories.\n",
     "\n",
-    "# Four File status in the repository\n",
+    "## Mettre en place git sur un répertoire existant\n",
     "\n",
-    "![Status](images/18333fig0201-tn.png){width=50%}\n",
-    "\n",
-    "# Initializing a repository in an existing directory\n",
+    "Imaginons un article avec deux fichiers:\n",
     "\n",
     "```\n",
+    "$ mkdir sandbox\n",
+    "$ cd sandbox\n",
+    "$ touch document.tex figure.png\n",
     "$ ls article\n",
     "\tdocument.tex\tfigure.png\n",
     "$ git init\n",
@@ -407,7 +377,7 @@
     "\t(use \"git add\" to track)\n",
     "```\n",
     "\n",
-    "# Adding files in your repository\n",
+    "## Ajouter les fichiers au dépôt git\n",
     "\n",
     "```\n",
     "$ git add document.tex\n",
@@ -429,46 +399,44 @@
     "```\n",
     "\n",
     "\n",
-    "# Cloning a existing repository\n",
+    "## `Add`  et `commit` \n",
     "\n",
-    "```\n",
-    "$ git clone git@github.com:pnavaro/irmar-git-project.git\n",
-    "\tCloning into 'projet'...\n",
-    "\tInitialized empty Git repository in /git/repositories/plm/navaro/projet.git/\n",
-    "\twarning: You appear to have cloned an empty repository.\n",
-    "\tChecking connectivity... done.\n",
+    "```bash\n",
+    "git add document.tex figure.png\n",
+    "git commit -m 'Add my contribution to the project'\n",
     "```\n",
     "\n",
-    "# Add and commit your files.\n",
+    "Vos fichiers ne sont pas encore présents sur le serveur. Il faut créer un dépot github, que vous pouvez appeler\n",
+    "sandbox:\n",
+    "- Cliquer sur le '+' en haut à droite et \"New repository\"\n",
+    "- Repository name = \"sandbox\"\n",
+    "- Laisser les options par défaut\n",
+    "- Cliquer sur \"Create repository\"\n",
     "\n",
+    "```bash\n",
+    "git remote add origin git@github.com:pnavaro/sandbox.git\n",
     "```\n",
-    "$ cd sandbox/your_name\n",
-    "$ touch document.tex figure.png\n",
-    "$ git add document.tex figure.png\n",
-    "$ git commit -m 'Add my contribution to the project'\n",
-    "```\n",
     "\n",
-    "Your files are NOT present on the server!\n",
-    "\n",
-    "~~~\n",
-    "$ git status\n",
+    "```bash\n",
+    "git status\n",
     "\tOn branch master\n",
     "\tYour branch is ahead of 'origin/master' by 1 commit.\n",
     "  \t(use \"git push\" to publish your local commits)\n",
-    "~~~\n",
+    "```\n",
     "\n",
-    "# Synchronizing your files on the server\n",
+    "## \"Push\"\n",
     "\n",
-    "By default you are on the \"master\" branch.\n",
+    "par défaut vous êtes sur la branche \"master\"\n",
     "\n",
     "```\n",
     "$ git branch\n",
     "\t* master\n",
     "```\n",
-    "Upload your files to the server:\n",
+    "\n",
+    "\"Pousser\" voos fichiers sur le serveur\n",
     "\n",
     "```\n",
-    "$ git push origin master\n",
+    "$ git push -u origin master\n",
     "\t...\n",
     "\tTo https://github.com/pnavaro/irmar-git-project\n",
     "   \t\tae2ce3c..ed796ea  master -> master\n",
