--- a/09-exemple-r.ipynb
+++ b/09-exemple-r.ipynb
@@ -15,6 +15,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:28:43.934723Z",
+     "iopub.status.busy": "2020-09-10T15:28:43.930783Z",
+     "iopub.status.idle": "2020-09-10T15:28:43.958073Z",
+     "shell.execute_reply": "2020-09-10T15:28:43.956996Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -29,6 +35,12 @@
    "execution_count": 2,
    "metadata": {
     "echo": true,
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:28:44.015238Z",
+     "iopub.status.busy": "2020-09-10T15:28:43.960815Z",
+     "iopub.status.idle": "2020-09-10T15:28:44.071533Z",
+     "shell.execute_reply": "2020-09-10T15:28:44.070867Z"
+    },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
@@ -58,6 +70,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:28:44.075090Z",
+     "iopub.status.busy": "2020-09-10T15:28:44.074225Z",
+     "iopub.status.idle": "2020-09-10T15:28:47.150507Z",
+     "shell.execute_reply": "2020-09-10T15:28:47.150912Z"
+    },
     "message": false,
     "slideshow": {
      "slide_type": "slide"
