--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -26,6 +26,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:37.670365Z",
+     "iopub.status.busy": "2020-09-10T15:23:37.669910Z",
+     "iopub.status.idle": "2020-09-10T15:23:37.671918Z",
+     "shell.execute_reply": "2020-09-10T15:23:37.671469Z"
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -69,6 +75,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:37.674843Z",
+     "iopub.status.busy": "2020-09-10T15:23:37.674405Z",
+     "iopub.status.idle": "2020-09-10T15:23:37.678071Z",
+     "shell.execute_reply": "2020-09-10T15:23:37.677671Z"
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -82,6 +94,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:37.687511Z",
+     "iopub.status.busy": "2020-09-10T15:23:37.687092Z",
+     "iopub.status.idle": "2020-09-10T15:23:42.989357Z",
+     "shell.execute_reply": "2020-09-10T15:23:42.988790Z"
+    },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
@@ -100,6 +118,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:43.000202Z",
+     "iopub.status.busy": "2020-09-10T15:23:42.999781Z",
+     "iopub.status.idle": "2020-09-10T15:23:43.002760Z",
+     "shell.execute_reply": "2020-09-10T15:23:43.003122Z"
+    },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "fragment"
@@ -116,6 +140,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:43.007727Z",
+     "iopub.status.busy": "2020-09-10T15:23:43.006808Z",
+     "iopub.status.idle": "2020-09-10T15:23:43.008588Z",
+     "shell.execute_reply": "2020-09-10T15:23:43.008948Z"
+    },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
@@ -136,6 +166,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:43.012625Z",
+     "iopub.status.busy": "2020-09-10T15:23:43.012180Z",
+     "iopub.status.idle": "2020-09-10T15:23:43.014272Z",
+     "shell.execute_reply": "2020-09-10T15:23:43.013844Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -151,6 +187,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-10T15:23:43.026943Z",
+     "iopub.status.busy": "2020-09-10T15:23:43.017325Z",
+     "iopub.status.idle": "2020-09-10T15:23:43.246367Z",
+     "shell.execute_reply": "2020-09-10T15:23:43.246709Z"
+    },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
@@ -160,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f5dd8f52ee0>"
+       "<matplotlib.collections.PathCollection at 0x7f4012216340>"
       ]
      },
      "execution_count": 7,
