--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:37.670365Z",
-     "iopub.status.busy": "2020-09-10T15:23:37.669910Z",
-     "iopub.status.idle": "2020-09-10T15:23:37.671918Z",
-     "shell.execute_reply": "2020-09-10T15:23:37.671469Z"
+     "iopub.execute_input": "2020-09-10T20:35:36.255466Z",
+     "iopub.status.busy": "2020-09-10T20:35:36.253947Z",
+     "iopub.status.idle": "2020-09-10T20:35:36.256412Z",
+     "shell.execute_reply": "2020-09-10T20:35:36.257065Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -76,10 +76,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:37.674843Z",
-     "iopub.status.busy": "2020-09-10T15:23:37.674405Z",
-     "iopub.status.idle": "2020-09-10T15:23:37.678071Z",
-     "shell.execute_reply": "2020-09-10T15:23:37.677671Z"
+     "iopub.execute_input": "2020-09-10T20:35:36.261889Z",
+     "iopub.status.busy": "2020-09-10T20:35:36.260464Z",
+     "iopub.status.idle": "2020-09-10T20:35:36.262542Z",
+     "shell.execute_reply": "2020-09-10T20:35:36.263148Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -95,10 +95,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:37.687511Z",
-     "iopub.status.busy": "2020-09-10T15:23:37.687092Z",
-     "iopub.status.idle": "2020-09-10T15:23:42.989357Z",
-     "shell.execute_reply": "2020-09-10T15:23:42.988790Z"
+     "iopub.execute_input": "2020-09-10T20:35:36.267260Z",
+     "iopub.status.busy": "2020-09-10T20:35:36.266647Z",
+     "iopub.status.idle": "2020-09-10T20:35:40.490522Z",
+     "shell.execute_reply": "2020-09-10T20:35:40.489932Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -119,10 +119,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:43.000202Z",
-     "iopub.status.busy": "2020-09-10T15:23:42.999781Z",
-     "iopub.status.idle": "2020-09-10T15:23:43.002760Z",
-     "shell.execute_reply": "2020-09-10T15:23:43.003122Z"
+     "iopub.execute_input": "2020-09-10T20:35:40.504881Z",
+     "iopub.status.busy": "2020-09-10T20:35:40.504298Z",
+     "iopub.status.idle": "2020-09-10T20:35:40.507664Z",
+     "shell.execute_reply": "2020-09-10T20:35:40.508135Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -141,10 +141,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:43.007727Z",
-     "iopub.status.busy": "2020-09-10T15:23:43.006808Z",
-     "iopub.status.idle": "2020-09-10T15:23:43.008588Z",
-     "shell.execute_reply": "2020-09-10T15:23:43.008948Z"
+     "iopub.execute_input": "2020-09-10T20:35:40.513782Z",
+     "iopub.status.busy": "2020-09-10T20:35:40.512784Z",
+     "iopub.status.idle": "2020-09-10T20:35:40.515304Z",
+     "shell.execute_reply": "2020-09-10T20:35:40.514796Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -167,10 +167,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:43.012625Z",
-     "iopub.status.busy": "2020-09-10T15:23:43.012180Z",
-     "iopub.status.idle": "2020-09-10T15:23:43.014272Z",
-     "shell.execute_reply": "2020-09-10T15:23:43.013844Z"
+     "iopub.execute_input": "2020-09-10T20:35:40.520247Z",
+     "iopub.status.busy": "2020-09-10T20:35:40.519259Z",
+     "iopub.status.idle": "2020-09-10T20:35:40.522209Z",
+     "shell.execute_reply": "2020-09-10T20:35:40.521325Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -188,10 +188,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T15:23:43.026943Z",
-     "iopub.status.busy": "2020-09-10T15:23:43.017325Z",
-     "iopub.status.idle": "2020-09-10T15:23:43.246367Z",
-     "shell.execute_reply": "2020-09-10T15:23:43.246709Z"
+     "iopub.execute_input": "2020-09-10T20:35:40.539171Z",
+     "iopub.status.busy": "2020-09-10T20:35:40.538561Z",
+     "iopub.status.idle": "2020-09-10T20:35:40.814445Z",
+     "shell.execute_reply": "2020-09-10T20:35:40.814928Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f4012216340>"
+       "<matplotlib.collections.PathCollection at 0x7f3d7a4ab340>"
       ]
      },
      "execution_count": 7,
