deploy: f2cd4154ad8cbfb37dc7beb319b3d5a1cfb1c207

--- a/02-gitbasics.ipynb
+++ b/02-gitbasics.ipynb
@@ -207,10 +207,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.551841Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.551286Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.578158Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.578682Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.409424Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.408881Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.435576Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.436118Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -392,10 +392,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.583014Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.582460Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.611085Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.611561Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.440841Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.440338Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.475950Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.476936Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -580,10 +580,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.616074Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.615506Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.628509Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.628981Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.483688Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.482645Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.492704Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.493212Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -627,10 +627,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.634881Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.632858Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.680257Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.679769Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.501874Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.497423Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.548176Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.547737Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -656,10 +656,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.685851Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.683818Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.694632Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.695070Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.554542Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.551604Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.564497Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.564057Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -707,10 +707,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.701934Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.700967Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.710372Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.710807Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.568326Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.567686Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.579858Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.580367Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -740,10 +740,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.717110Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.716293Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.725346Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.724839Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.584911Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.584241Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.594798Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.595318Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -771,10 +771,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.732396Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.731248Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.740998Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.739771Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.602240Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.601511Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.609191Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.609628Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -791,10 +791,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.746820Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.744565Z",
-     "iopub.status.idle": "2020-09-10T20:35:31.756316Z",
-     "shell.execute_reply": "2020-09-10T20:35:31.756766Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.615285Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.613618Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.625047Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.625504Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -885,10 +885,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:31.762200Z",
-     "iopub.status.busy": "2020-09-10T20:35:31.760173Z",
-     "iopub.status.idle": "2020-09-10T20:35:32.003527Z",
-     "shell.execute_reply": "2020-09-10T20:35:32.003010Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.631570Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.630603Z",
+     "iopub.status.idle": "2020-09-10T20:36:28.877600Z",
+     "shell.execute_reply": "2020-09-10T20:36:28.877039Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -954,10 +954,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:32.009592Z",
-     "iopub.status.busy": "2020-09-10T20:35:32.006857Z",
-     "iopub.status.idle": "2020-09-10T20:35:32.122189Z",
-     "shell.execute_reply": "2020-09-10T20:35:32.122765Z"
+     "iopub.execute_input": "2020-09-10T20:36:28.884803Z",
+     "iopub.status.busy": "2020-09-10T20:36:28.884047Z",
+     "iopub.status.idle": "2020-09-10T20:36:29.001610Z",
+     "shell.execute_reply": "2020-09-10T20:36:29.001150Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1011,10 +1011,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:32.128721Z",
-     "iopub.status.busy": "2020-09-10T20:35:32.126433Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.309756Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.309276Z"
+     "iopub.execute_input": "2020-09-10T20:36:29.007879Z",
+     "iopub.status.busy": "2020-09-10T20:36:29.005027Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.099233Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.099686Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1026,12 +1026,10 @@
      "output_type": "stream",
      "text": [
       "Your branch is up to date with 'origin/master'.\n",
-      "Updating 27ce58d..58bbaa6\n",
+      "Updating f2cd415..58bbaa6\n",
       "Fast-forward\n",
-      " Dockerfile   | 3 ---\n",
       " nbcourse.yml | 2 +-\n",
-      " 2 files changed, 1 insertion(+), 4 deletions(-)\n",
-      " delete mode 100644 Dockerfile\n"
+      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
      ]
     },
     {
@@ -1040,7 +1038,7 @@
      "text": [
       "Switched to branch 'master'\n",
       "From https://github.com/pnavaro/agrocampus\n",
-      "   27ce58d..58bbaa6  master     -> origin/master\n",
+      "   f2cd415..58bbaa6  master     -> origin/master\n",
       " * [new branch]      gh-pages   -> origin/gh-pages\n"
      ]
     }
@@ -1057,10 +1055,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.315401Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.314803Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.339764Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.338793Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.106181Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.103811Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.124573Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.124985Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1071,12 +1069,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updating 27ce58d..58bbaa6\n",
+      "Updating f2cd415..58bbaa6\n",
       "Fast-forward\n",
-      " Dockerfile   | 3 ---\n",
       " nbcourse.yml | 2 +-\n",
-      " 2 files changed, 1 insertion(+), 4 deletions(-)\n",
-      " delete mode 100644 Dockerfile\n"
+      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
      ]
     },
     {
@@ -1172,10 +1168,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.345715Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.345150Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.387614Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.387090Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.132006Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.128725Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.157019Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.156540Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1224,10 +1220,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.393130Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.391835Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.412937Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.413487Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.164023Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.160516Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.188343Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.189205Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1279,10 +1275,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.417743Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.417189Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.439391Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.439948Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.196143Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.195455Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.221385Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.220800Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -1372,10 +1368,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.445718Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.443605Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.467157Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.466624Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.229069Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.225235Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.255285Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.256259Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1429,10 +1425,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:33.472518Z",
-     "iopub.status.busy": "2020-09-10T20:35:33.470464Z",
-     "iopub.status.idle": "2020-09-10T20:35:33.482282Z",
-     "shell.execute_reply": "2020-09-10T20:35:33.481789Z"
+     "iopub.execute_input": "2020-09-10T20:36:30.264211Z",
+     "iopub.status.busy": "2020-09-10T20:36:30.260326Z",
+     "iopub.status.idle": "2020-09-10T20:36:30.274899Z",
+     "shell.execute_reply": "2020-09-10T20:36:30.275717Z"
     },
     "slideshow": {
      "slide_type": "fragment"
