--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:36.255466Z",
-     "iopub.status.busy": "2020-09-10T20:35:36.253947Z",
-     "iopub.status.idle": "2020-09-10T20:35:36.256412Z",
-     "shell.execute_reply": "2020-09-10T20:35:36.257065Z"
+     "iopub.execute_input": "2020-09-10T20:36:33.087578Z",
+     "iopub.status.busy": "2020-09-10T20:36:33.087053Z",
+     "iopub.status.idle": "2020-09-10T20:36:33.093561Z",
+     "shell.execute_reply": "2020-09-10T20:36:33.093048Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -76,10 +76,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:36.261889Z",
-     "iopub.status.busy": "2020-09-10T20:35:36.260464Z",
-     "iopub.status.idle": "2020-09-10T20:35:36.262542Z",
-     "shell.execute_reply": "2020-09-10T20:35:36.263148Z"
+     "iopub.execute_input": "2020-09-10T20:36:33.098861Z",
+     "iopub.status.busy": "2020-09-10T20:36:33.097319Z",
+     "iopub.status.idle": "2020-09-10T20:36:33.099708Z",
+     "shell.execute_reply": "2020-09-10T20:36:33.101327Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -95,17 +95,25 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:36.267260Z",
-     "iopub.status.busy": "2020-09-10T20:35:36.266647Z",
-     "iopub.status.idle": "2020-09-10T20:35:40.490522Z",
-     "shell.execute_reply": "2020-09-10T20:35:40.489932Z"
+     "iopub.execute_input": "2020-09-10T20:36:33.105413Z",
+     "iopub.status.busy": "2020-09-10T20:36:33.104876Z",
+     "iopub.status.idle": "2020-09-10T20:36:40.057687Z",
+     "shell.execute_reply": "2020-09-10T20:36:40.056837Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -119,10 +127,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:40.504881Z",
-     "iopub.status.busy": "2020-09-10T20:35:40.504298Z",
-     "iopub.status.idle": "2020-09-10T20:35:40.507664Z",
-     "shell.execute_reply": "2020-09-10T20:35:40.508135Z"
+     "iopub.execute_input": "2020-09-10T20:36:40.073696Z",
+     "iopub.status.busy": "2020-09-10T20:36:40.072403Z",
+     "iopub.status.idle": "2020-09-10T20:36:40.075301Z",
+     "shell.execute_reply": "2020-09-10T20:36:40.075838Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -141,10 +149,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:40.513782Z",
-     "iopub.status.busy": "2020-09-10T20:35:40.512784Z",
-     "iopub.status.idle": "2020-09-10T20:35:40.515304Z",
-     "shell.execute_reply": "2020-09-10T20:35:40.514796Z"
+     "iopub.execute_input": "2020-09-10T20:36:40.081972Z",
+     "iopub.status.busy": "2020-09-10T20:36:40.080926Z",
+     "iopub.status.idle": "2020-09-10T20:36:40.083069Z",
+     "shell.execute_reply": "2020-09-10T20:36:40.083497Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -167,10 +175,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:40.520247Z",
-     "iopub.status.busy": "2020-09-10T20:35:40.519259Z",
-     "iopub.status.idle": "2020-09-10T20:35:40.522209Z",
-     "shell.execute_reply": "2020-09-10T20:35:40.521325Z"
+     "iopub.execute_input": "2020-09-10T20:36:40.089411Z",
+     "iopub.status.busy": "2020-09-10T20:36:40.088142Z",
+     "iopub.status.idle": "2020-09-10T20:36:40.090019Z",
+     "shell.execute_reply": "2020-09-10T20:36:40.090518Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -188,10 +196,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:35:40.539171Z",
-     "iopub.status.busy": "2020-09-10T20:35:40.538561Z",
-     "iopub.status.idle": "2020-09-10T20:35:40.814445Z",
-     "shell.execute_reply": "2020-09-10T20:35:40.814928Z"
+     "iopub.execute_input": "2020-09-10T20:36:40.107072Z",
+     "iopub.status.busy": "2020-09-10T20:36:40.106415Z",
+     "iopub.status.idle": "2020-09-10T20:36:40.390485Z",
+     "shell.execute_reply": "2020-09-10T20:36:40.390996Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -202,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f3d7a4ab340>"
+       "<matplotlib.collections.PathCollection at 0x7f069722c370>"
       ]
      },
      "execution_count": 7,
